--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" crossorigin src="/assets/index.1a9436b1.js"></script>
+    <script type="module" crossorigin src="/assets/index.b0227044.js"></script>
     <link rel="stylesheet" href="/assets/index.e1e6ff9e.css">
   </head>
   <body>
@@ -23,5 +23,13 @@
   }
   html * {
     font-family: Arial;
+  }
+  @media screen and (max-width: 500px) {
+    .el-table__header,
+    .el-table__body,
+    .el-table__footer {
+      width: 100% !important;
+      table-layout: fixed !important;
+    }
   }
 </style>
